--- a/css/health.css
+++ b/css/health.css
@@ -1,4 +1,20 @@
-/* .card-img-top{
-	height:300px;
-	width: 300px;
-} */
+.graph {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+#humid{ 
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+#temp {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+#comfort {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
